fix: show whitespace also with display flex instead of display box

--- a/components/CtaLink/src/index.scss
+++ b/components/CtaLink/src/index.scss
@@ -62,6 +62,7 @@
     -webkit-line-clamp: 2;
     -webkit-box-orient: vertical;
     overflow: hidden;
+    white-space: pre-wrap;
   }
 }
 
